[metadata]
name = streamlit-toc
version = 0.1
description = a possible solution to manage multi-page Streamlit apps using streamlit-option-menu
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvio Lugaro
author_email = silvio.lugaro@gmail.com

[options]
packages = find:
python_requires = >=3.8
install_requires =
    streamlit
    streamlit-option-menu
